thêm tê giác quokka chỉnh about us

--- a/Elephant.html
+++ b/Elephant.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="Elephant.css">
 </head>
 <body>
-    <h1>Voi</h1>
-    <div id="Pic">
-        <i><h2>Hình Ảnh</h2></i>
-        <img width="350px" src="https://c402277.ssl.cf1.rackcdn.com/photos/11552/images/hero_small/rsz_namibia_will_burrard_lucas_wwf_us_1.jpg?1462219623" alt="" srcset="">
-        <img id="center-img" width="400px" src="https://assets.nrdc.org/sites/default/files/styles/full_content--retina/public/media-uploads/wlds43_654640_2400.jpg?itok=LbhnLIk9" alt="">
-        <img width="400px" id="right-img" src="https://thenypost.files.wordpress.com/2019/07/killing-of-50-year-old-alpha-elephant-bull.jpg?quality=90&strip=all" alt="" srcset="">
+    <h2><i>Voi(Elephant)</i></h2>
+  
+      
+        <img width="400" height="300"  src="https://c402277.ssl.cf1.rackcdn.com/photos/11552/images/hero_small/rsz_namibia_will_burrard_lucas_wwf_us_1.jpg?1462219623" alt="" srcset="">
+        <img  width="400" height="300"  src="https://assets.nrdc.org/sites/default/files/styles/full_content--retina/public/media-uploads/wlds43_654640_2400.jpg?itok=LbhnLIk9" alt="">
+        <img width="400" height="300" id="right-img" src="https://thenypost.files.wordpress.com/2019/07/killing-of-50-year-old-alpha-elephant-bull.jpg?quality=90&strip=all" alt="" srcset="">
     </div>
     
     <div class="basic">
@@ -26,10 +26,6 @@
         <p>Voi có não nặng hơn bất tất cả các loại động vật khác (5kg)</p>
     </div>
 
-    <div class="basic">
-        <img id="basic_img" width="250px"src="https://kenh14cdn.com/Images/Uploaded/Share/2011/04/08/342.jpg" alt="">
-
-    </div>
 
     <div id="Appearence">
         <i><h2>Mô tả ngoại hình của voi</h2></i>
@@ -43,7 +39,7 @@
     </body>
 
     <div id="Video">
-        <i><h2>Video</h2></i>
+        <i><h2>Tham khảo</h2></i>
 <iframe width="1519" height="591" src="https://www.youtube.com/embed/Aw6GkiCvcWs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </html>
