--- a/Environment.html
+++ b/Environment.html
@@ -22,7 +22,7 @@
         <a href="Stories.html" target="__blank"><button id="stories_btn" ><i>Tin tức</i></button></a> 
         <a href="WildLife.html" target="__blank"><button id="wild_btn" ><i>Khám phá</i></button></a> 
         <a href="Suggestion.html" target="__blank"><button id="suggest_btn" ><i>Gợi ý</i></button></a> 
-        <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về tác giả</i></button></a>
+        <a href="game.html" target="__blank"><button id="about_btn"><i>Kiến thức</i></button></a>
         
         </div>   
        
