--- a/quokka.html
+++ b/quokka.html
@@ -24,8 +24,7 @@
     <p> <p>Mặc dù không bự con như tổ tiên Kangaroo nhưng Quokka cũng có điểm chung theo họ hàng là loài chuột có túi. Nó nuôi con nhỏ trong chiếc túi bé tí của mình. Dù giao phối cũng nhiều nhưng mỗi năm Quokka chỉ đẻ thành công một lứa</p></p>
      <img src="quokka5.jpg" alt=""  width="300" height="300">
     <i><h2>Tham khảo</h2></i>
-    <iframe width="1280" height="528" src="https://www.youtube.com/watch?v=zFO-0AlgSDI" ></iframe>
-  
+    <iframe width="1519" height="591" src="https://www.youtube.com/embed/nj-EGNN5HwQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
    
 </body>
 </html>
