--- a/rhino.html
+++ b/rhino.html
@@ -44,8 +44,7 @@
     <p><i>Một chú tê giác đang tắm bùn ở Vườn quốc gia Ujung Kulon </i></p>
 
     <i><h2>Tham khảo</h2></i>
-    <iframe src="https://www.youtube.com/watch?v=R02QrS2aCDM" ></iframe>
-
+    <iframe width="1519" height="591" src="https://www.youtube.com/embed/R02QrS2aCDM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
