--- a/Panda.html
+++ b/Panda.html
@@ -49,8 +49,7 @@
     <img width="500px" class="center" src="https://images.chinahighlights.com/allpicture/2017/08/f9bdba975f7446449d27f517.webp" alt="" srcset=""> 
   <p></p>
     <i><h2>Tham khảo</h2></i>
-        <iframe width="1280" height="528" src="https://www.youtube.com/watch?v=JLJ7NnpmGus"> </iframe>
-</body>
+    <iframe width="1519" height="591" src="https://www.youtube.com/embed/dqT-UlYlg1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></body>
 </html>
 
 
