--- a/Environment.html
+++ b/Environment.html
@@ -19,10 +19,10 @@
              <i>ENVIRONMENT</i> 
         </div>
         <div id= "buttons">
-        <a href="Stories.html" target="__blank"><button id="stories_btn" ><i>Tin tức</i></button></a> 
-        <a href="WildLife.html" target="__blank"><button id="wild_btn" ><i>Khám phá</i></button></a> 
-        <a href="Suggestion.html" target="__blank"><button id="suggest_btn" ><i>Gợi ý</i></button></a> 
-        <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về tác giả</i></button></a>
+        <a href="Stories.html"><button id="stories_btn" ><i>Tin tức</i></button></a> 
+        <a href="WildLife.html"><button id="wild_btn" ><i>Khám phá</i></button></a> 
+        <a href="Suggestion.html"><button id="suggest_btn" ><i>Gợi ý</i></button></a> 
+        <a href="AboutUs.html"><button id="about_btn"><i>Về chúng tôi </i></button></a>
         
         </div>   
    
