--- a/n2.html
+++ b/n2.html
@@ -14,11 +14,11 @@
         <a href="Stories.html" target="__blank"><button id="stories_btn" ><i>Tin tức</i></button></a> 
         <a href="WildLife.html" target="__blank"><button id="wild_btn" ><i>Khám phá</i></button></a> 
         <a href="Suggestion.html" target="__blank"><button id="suggest_btn" ><i>Gợi ý</i></button></a> 
-        <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về tác giả</i></button></a>
+        <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về chúng tôi </i></button></a>
     </div>
     <p id="n-txt">Ethiopia lập kỷ lục trồng 350 triệu cây xanh trong một ngày</p>
     <div id="n">
-        <b>Ethiopia lập kỷ lục trồng trên 200 triệu cây xanh trong một ngày</b> 
+        <b>Người dân Ethiopia trồng 350 triệu cây con trong chiến dịch phủ xanh do chính phủ phát động, phá vỡ kỷ lục 66 triệu cây của Ấn Độ năm 2017.</b>
         <br>
         <p></p>
         Sáng kiến đầy tham vọng của Thủ tướng Abiy Ahmed nhằm giúp khôi phục lại cảnh quan của đất nước vốn bị tàn phá nặng nề trong những thập kỷ qua khiến tỷ lệ rừng tại đất nước này giảm mạnh. Các chuyên gia cho rằng, rừng Ethiopia đang bị xói mòn nhanh chóng bởi nạn phá rừng và biến đổi khí hậu.
@@ -28,9 +28,6 @@
         <br>
         <p></p>
         Trên thực tế, Công ty Phát thanh truyền hình Fana trực thuộc nhà nước đã công bố trên 224 triệu cây xanh được trồng, vượt qua mục tiêu con số ban đầu là 200 triệu cây trồng trong một ngày.
-        <br>
-        <p></p>
-        The lesson was conducted by Illac Angelo Diaz, Executive Director of Liter of Light- a non-profit renewable energy organisation and winner of the Zayed Future Energy Prize in 2015.
         <br>
         <p></p>
         "Hôm nay (tức ngày 30/7), Ethiopia đã nỗ lực trồng cây và phá vỡ kỷ lục thế giới để có một di sản xanh", Văn phòng Thủ tướng viết trên Twitter.
