--- a/n4.html
+++ b/n4.html
@@ -14,7 +14,7 @@
         <a href="Stories.html" target="__blank"><button id="stories_btn" ><i>Tin tức</i></button></a> 
         <a href="WildLife.html" target="__blank"><button id="wild_btn" ><i>Khám phá</i></button></a> 
         <a href="Suggestion.html" target="__blank"><button id="suggest_btn" ><i>Gợi ý</i></button></a> 
-        <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về tác giả</i></button></a>
+        <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về chúng tôi </i></button></a>
     </div>
     <div id="n">
         <b>Chiến dịch quảng cáo ngoài trời thể hiện nỗ lực bảo vệ môi trường của Coca-cola</b>
