--- a/n5.html
+++ b/n5.html
@@ -10,12 +10,12 @@
 <body>
     
     <img src="https://sohanews.mediacdn.vn/thumb_w/660/2019/7/25/105225133051701037-15640201861632128300515-15640253959081916155614.png" alt="" id="n-img">
-    <p>Sự kiện trăm năm có một: Cá mập khổng lồ có hành vi kỳ lạ, khoa học giải thích ra sao?</p>
+    <p id="n-txt">Sự kiện trăm năm có một: Cá mập khổng lồ có hành vi kỳ lạ, khoa học giải thích ra sao?</p>
     <div id="buttons">
         <a href="Stories.html" target="__blank"><button id="stories_btn" ><i>Tin tức</i></button></a> 
         <a href="WildLife.html" target="__blank"><button id="wild_btn" ><i>Khám phá</i></button></a> 
         <a href="Suggestion.html" target="__blank"><button id="suggest_btn" ><i>Gợi ý</i></button></a> 
-        <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về tác giả</i></button></a>
+        <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về chúng tôi </i></button></a>
     </div>
      <div id="n">
          <b>Nặng 2,5 tấn, Deep Blue được xem là con cá mập trắng lớn nhất từng được phát hiện ngày nay.</b>
