--- a/WildLife.html
+++ b/WildLife.html
@@ -92,7 +92,8 @@ body {
   <a class="active" href="Environment.html">Trang chủ</a>
   <a href="Stories.html">Tin tức</a>
   <a href="WildLife.html">Khám phá</a>
-  <a href="Suggestion.html">Hành động</a>
+  <a href="Suggestion.html">Gợi ý</a>
+  <a href="game.html">Kiến thức</a>
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search.." name="search">
