--- a/Environment.html
+++ b/Environment.html
@@ -14,9 +14,9 @@
 </style>
 <body>
    <div id="image">
-        <img src="https://media.giphy.com/media/yK0lgAQyic2yY/giphy.gif" width="1000" height="900"  alt="" style="width:100%">
+        <img src="https://media.giphy.com/media/i3Q3sx91EfmJq/giphy.gif" width="700" height="800"  alt="" style="width:100%">
         <div id="title">
-             <i>ENVIRONMENT</i> 
+             <i> WE &#10084; ENVIRONMENT</i> 
         </div>
         <div id= "buttons">
         <a href="Stories.html" target="__blank"><button id="stories_btn" ><i>Tin tức</i></button></a> 
